Expand league rule imports
